@@ -28,7 +28,6 @@ import static org.apache.kudu.flume.sink.KuduSinkConfigurationConstants.TIMEOUT_
 
 import java.util.List;
 
-import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
 import org.apache.flume.Channel;
 import org.apache.flume.Context;
@@ -115,14 +114,14 @@ public class KuduSink extends AbstractSink implements Configurable {
     this(null);
   }
 
-  @VisibleForTesting
+  @InterfaceAudience.LimitedPrivate("Test")
   @InterfaceAudience.Private
   public KuduSink(KuduClient kuduClient) {
     this.client = kuduClient;
   }
 
   @Override
-  public void start() {
+  public synchronized void start() {
     Preconditions.checkState(table == null && session == null,
         "Please call stop before calling start on an old instance.");
 
@@ -152,7 +151,7 @@ public class KuduSink extends AbstractSink implements Configurable {
   }
 
   @Override
-  public void stop() {
+  public synchronized void stop() {
     Exception ex = null;
     try {
       operationsProducer.close();
@@ -183,7 +182,7 @@ public class KuduSink extends AbstractSink implements Configurable {
   public void configure(Context context) {
     masterAddresses = context.getString(MASTER_ADDRESSES);
     Preconditions.checkNotNull(masterAddresses,
-        "Missing master addresses. Please specify property '$s'.",
+        "Missing master addresses. Please specify property '%s'.",
         MASTER_ADDRESSES);
 
     tableName = context.getString(TABLE_NAME);
@@ -210,7 +209,7 @@ public class KuduSink extends AbstractSink implements Configurable {
       Class<? extends KuduOperationsProducer> clazz =
           (Class<? extends KuduOperationsProducer>)
           Class.forName(operationProducerType);
-      operationsProducer = clazz.newInstance();
+      operationsProducer = clazz.getDeclaredConstructor().newInstance();
       operationsProducer.configure(producerContext);
     } catch (Exception e) {
       logger.error("Could not instantiate Kudu operations producer" , e);
